--- a/src/app/i18n/locales/zh-CN/footer.json
+++ b/src/app/i18n/locales/zh-CN/footer.json
@@ -20,6 +20,7 @@
   "customers.media-entertainment": "媒体与娱乐",
   "customers.events": "活动",
   "customers.game": "游戏",
+  "common.vote": "在 ProductHunt 上给我们投票",
   "customers.publisher": "出版商",
   "customers.education": "教育",
   "customers.non-profit": "非营利组织",
