--- a/src/app/i18n/locales/en-US/footer.json
+++ b/src/app/i18n/locales/en-US/footer.json
@@ -43,6 +43,7 @@
   "group.customers": "Customers",
   "group.resources": "Resources",
   "group.company": "Company",
+  "common.vote": "Vote us on ProductHunt",
   "tezignShanghaiInfo": "© Tezign (Shanghai) Information Technology Co., Ltd.",
   "shanghaiIcpNo1502142": "Shanghai ICP No. 15021426-22",
   "shanghaiPublicNetwork": "Shanghai Public Network Security No. 31010402010164",
