update pricing and quotation

--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -1,6 +1,6 @@
 {
-    "Basic": "Basic",
-    "Advanced": "Advanced",
+    "Basic": "Team",
+    "Advanced": "Enterprise",
     "ValueAddedServices": "Value-Added Services",
     "aiCapabilities.title": "AI Capabilities",
     "aiCapabilities.0.name": "AI Auto Parsing",
@@ -70,7 +70,7 @@
     "extensions.1.detail": "Drag-and-drop or batch collection of images, videos, and web content with one-click saving functionality",
     "extensions.2.name": "Social Media Collection",
     "extensions.2.detail": "Rapid content collection from popular platforms including Xiaohongshu, Douyin, Weibo, WeChat official accounts, and other social networks",
-    "advancedFeatures.title": "Advanced Features",
+    "advancedFeatures.title": "Enterprise Features",
     "advancedFeatures.0.name": "AskMuse",
     "advancedFeatures.0.detail": "Interactive AI engine for Q&A and conversations based on your asset library and folder content",
     "advancedFeatures.1.name": "Version Control",
@@ -106,13 +106,32 @@
     "customSystemHomepage.5.detail": "Hot assets, recent visits, shared spaces, and favorites display modules",
     "customSystemHomepage.6.name": "Background Settings",
     "customSystemHomepage.6.detail": "Full-screen or half-screen layout options with uploaded or online background images",
-    "approvalWorkflow.title": "Project Approval",
-    "approvalWorkflow.0.name": "Configurable Approval Processes",
-    "approvalWorkflow.0.detail": "Flexible workflow configuration to match organizational requirements and compliance needs",
-    "approvalWorkflow.1.name": "Workflow Design",
-    "approvalWorkflow.1.detail": "Custom approval process design and management tools",
-    "approvalWorkflow.2.name": "Approver Designation",
-    "approvalWorkflow.2.detail": "Assign specific approvers for different workflow stages and content types",
+    "standardProjectHub.title": "Standard Project Hub",
+    "standardProjectHub.0.name": "Efficient Project Management",
+    "standardProjectHub.0.detail": "Streamlined kanban workflows with rapid project initiation and agile execution, featuring customizable board configurations",
+    "standardProjectHub.1.name": "Visual Project Control",
+    "standardProjectHub.1.detail": "Comprehensive project progress overview and real-time stage monitoring for complete execution visibility",
+    "standardProjectHub.2.name": "Multi-dimensional View Modes",
+    "standardProjectHub.2.detail": "Task kanban, Gantt charts, and file asset views for versatile project management perspectives",
+    "standardProjectHub.3.name": "Member & Permission Management",
+    "standardProjectHub.3.detail": "Flexible assignment of task owners and reviewers to ensure clear accountability and process compliance",
+    "standardProjectHub.4.name": "Team Collaboration Features",
+    "standardProjectHub.4.detail": "Multi-user collaboration and real-time project tracking to enhance team productivity",
+    "advancedProjectHub.title": "Advanced Project Hub",
+    "advancedProjectHub.0.name": "Complete Feature Set",
+    "advancedProjectHub.0.detail": "Includes all core capabilities of the Standard Project Hub for comprehensive project management needs",
+    "advancedProjectHub.1.name": "Multi-stage Project Control",
+    "advancedProjectHub.1.detail": "Complex project phase breakdown, and Gate Keeper approval mechanisms",
+    "advancedProjectHub.2.name": "Automated Workflow Engine",
+    "advancedProjectHub.2.detail": "Visual workflow configuration with multiple triggers and automation rules, including intelligent approval workflows",
+    "advancedProjectHub.3.name": "Comprehensive Template Library",
+    "advancedProjectHub.3.detail": "Complete project templates covering FMCG, beauty, luxury goods, and other industry verticals",
+    "advancedProjectHub.4.name": "Deliverable Validation System",
+    "advancedProjectHub.4.detail": "Integrated Readiness checks with automated quality verification and compliance detection",
+    "advancedProjectHub.5.name": "Visual Readiness Management",
+    "advancedProjectHub.5.detail": "Real-time project completion tracking and issue identification for informed decision-making",
+    "advancedProjectHub.6.name": "Workflow Template Library",
+    "advancedProjectHub.6.detail": "Custom workflow templates to capture and scale internal best practices",
     "aiAutoTaggingEngine.title": "AI Auto-Tagging Engine",
     "aiAutoTaggingEngine.0.name": "Intelligent Recognition Capabilities",
     "aiAutoTaggingEngine.0.detail": "Support for text content analysis and image recognition, combined with folder path information and keyword matching mechanisms for precise content classification",
