--- a/src/app/i18n/locales/en-US/pricing.json
+++ b/src/app/i18n/locales/en-US/pricing.json
@@ -27,8 +27,8 @@
   "pricing.summary.enterprise.seatSet": "Custom seats and storage space",
   "pricing.summary.enterprise.roleSet": "Custom roles",
   "pricing.summary.enterprise.memberAndDepartment": "Members and departments",
-  "pricing.summary.enterprise.pointsManagement": "成员算力点数用量管理",
-  "pricing.summary.enterprise.teamFolder": "团队文件夹权限",
+  "pricing.summary.enterprise.pointsManagement": "Management of member computing power point usage",
+  "pricing.summary.enterprise.teamFolder": "Team folder permissions",
   "pricing.summary.enterprise.folder": "Granular permissions",
   "pricing.summary.accelerated": "Accelerated Uploads and Downloads",
   "pricing.perSeason": "PER SEASON",
@@ -42,7 +42,7 @@
   "plan.summary.storage": "{{val}} storage space",
   "plan.summary.seats.person_pro": "1 seat · non-expandable",
   "plan.summary.seats.team": "{{val}} seats · expandable",
-  "plan.summary.team.gallery": "团队专属自定义画廊",
+  "plan.summary.team.gallery": "Team exclusive custom gallery",
   "plan.summary.copyright.personal": "The copyright of AI artworks belongs to individuals",
   "plan.summary.copyright.enterprise": "Copyright of AI - generated images belongs to enterprises",
   "plan.summary.usage_rights": "Right of use: Free use",
@@ -545,16 +545,16 @@
   "pricing.perMonth.new": "/MONTH",
   "pricing.contact.sales": "Contact Sales",
   "pricing.enterpriseSummary.basicFolderPermissions": "Basic folder permissions",
-  "pricing.enterpriseSummary.includesAllBasic": "Includes all Basic Plan features",
+  "pricing.enterpriseSummary.includesAllBasic": "Includes all Team Plan features",
   "pricing.enterpriseSummary.advancedPermissions": "Advanced permission controls",
   "pricing.enterpriseSummary.advancedExtensions": "Advanced extension module options",
   "pricing.enterpriseSummary.customPlans": "Custom seat and storage plans",
   "pricing.enterpriseSummary.dedicatedManager": "Dedicated customer success manager",
   "pricing.enterpriseSummary.awsDeployment": "AWS private deployment",
   "pricing.enterpriseSummary.sla": "SLA service level agreements",
-  "pricing.enterpriseBilling.basic.title": "Basic",
+  "pricing.enterpriseBilling.basic.title": "Team",
   "pricing.enterpriseBilling.basic.description": "Ideal for individuals or small teams",
-  "pricing.enterpriseBilling.advanced.title": "Advanced",
+  "pricing.enterpriseBilling.advanced.title": "Enterprise",
   "pricing.enterpriseBilling.advanced.description": "Suitable for medium to large teams and enterprises",
   "pricing.enterpriseBilling.custom.title": "Custom",
   "pricing.enterpriseBilling.custom.description": "Designed for large organizations with special requirements"
