--- a/src/app/i18n/locales/en-US/quotation-feature.json
+++ b/src/app/i18n/locales/en-US/quotation-feature.json
@@ -1,6 +1,6 @@
 {
     "basic.title": "Basic Features",
-    "advanced.title": "Advanced Features",
+    "advanced.title": "Enterprise Features",
     "features.title": "Feature List",
     "basic.storageManagement": "Storage Management",
     "basic.storageManagement.value": "Unlimited Batch Upload, Large File Support",
@@ -12,12 +12,14 @@
     "basic.sharingAndCollaboration.value": "Flexible Asset Sharing, Time-Based Access Control, Permission Management, Secure Sharing, Comprehensive Sharing Dashboard",
     "basic.analyticsAndMonitoring": "Analytics & Monitoring",
     "basic.analyticsAndMonitoring.value": "Activity Logging, Asset Performance Analytics, User Behavior Insights",
-    "advanced.advancedFeatures": "Advanced Features",
+    "advanced.advancedFeatures": "Enterprise Features",
     "advanced.advancedFeatures.value": "AskMuse, Version Control, Collaborative Annotations, Multi-Level Permissions, Department Management, Enterprise Security, System-Wide Controls, Ownership Management",
     "advanced.customSystemHomepage": "Custom System Homepage",
     "advanced.customSystemHomepage.value": "Theme Configuration, Personalized Configuration, Navigation Layout, Website Links, Recommended Sections, Content Display Panels, Background Settings",
-    "advanced.approvalWorkflow": "Approval Workflow",
-    "advanced.approvalWorkflow.value": "Configurable Approval Processes, Workflow Design, Approver Designation, Approval Center",
+    "advanced.standardProjectHub": "Standard Project Hub",
+    "advanced.standardProjectHub.value": "Efficient Project Management, Visual Project Control, Multi-dimensional View Modes, Member & Permission Management, Team Collaboration Features",
+    "advanced.advancedProjectHub": "Advanced Project Hub",
+    "advanced.advancedProjectHub.value": "Complete Feature Set, Multi-stage Project Control, Automated Workflow Engine, Comprehensive Template Library, Deliverable Validation System, Visual Readiness Management, Workflow Template Library",
     "advanced.complianceCheck": "Compliance Check",
     "advanced.complianceCheck.value": "Content Safety Detection, Violence and Sensitive Content Detection, Restricted Terminology Detection, Enterprise Custom Word Filtering",
     "advanced.customMetadataFields": "Custom Metadata Fields",
