--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -5,8 +5,8 @@
     "customer.contact": "Customer Contact",
     "customer.email": "Customer Email",
     "your.email": "Your Contact Email",
-    "tab.basic": "Basic",
-    "tab.advanced": "Advanced",
+    "tab.basic": "Team",
+    "tab.advanced": "Enterprise",
     "tab.private": "Private Deployment",
     "basic.plan": "MuseDAM Basic Plan",
     "advanced.plan": "MuseDAM Enterprise Plan",
@@ -15,8 +15,8 @@
     "member.seat": "Member Seats",
     "storage.space": "Storage Space",
     "ai.points": "AI Points",
-    "base.cost": "Base Cost",
-    "advanced.modules": "Advanced Modules",
+    "base.cost": "Pricing",
+    "advanced.modules": "Enterprise Modules",
     "implementation": "Implementation",
     "operation.maintenance": "Operation and Maintenance",
     "feature.overview": "Feature Overview",
@@ -58,11 +58,12 @@
     "seats": "seats",
     "points.month": "points/month",
     "per.year": "/year",
-    "advanced.modules.title": "Advanced Modules",
-    "advanced.cost": "Advanced Cost",
-    "module.advancedFeatures": "Advanced Features",
+    "advanced.modules.title": "Enterprise Modules",
+    "advanced.cost": "Pricing",
+    "module.advancedFeatures": "Enterprise Features",
     "module.customSystemHomepage": "Custom System Homepage",
-    "module.approvalWorkflow": "Approval Workflow",
+    "module.standardProjectHub": "Standard Project Hub",
+    "module.advancedProjectHub": "Advanced Project Hub",
     "module.complianceCheck": "Compliance Check",
     "module.customMetadataFields": "Custom Metadata Fields",
     "module.watermark": "Watermark",
