--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -1,6 +1,6 @@
 {
-    "Basic": "基础版",
-    "Advanced": "高级版",
+    "Basic": "团队版",
+    "Advanced": "企业版",
     "ValueAddedServices": "增值服务",
     "aiCapabilities.title": "AI 能力",
     "aiCapabilities.0.name": "AI 自动解析",
@@ -70,7 +70,7 @@
     "extensions.1.detail": "拖拽或批量收集图片、视频和网页内容，一键保存功能",
     "extensions.2.name": "社交媒体采集",
     "extensions.2.detail": "快速采集小红书、抖音、微博、微信公众号等热门平台的内容",
-    "advancedFeatures.title": "高级功能",
+    "advancedFeatures.title": "企业功能",
     "advancedFeatures.0.name": "AskMuse",
     "advancedFeatures.0.detail": "基于素材库和文件夹内容的交互式 AI 问答引擎",
     "advancedFeatures.1.name": "版本控制",
@@ -108,13 +108,32 @@
     "customSystemHomepage.5.detail": "热门素材、最近访问、共享空间和收藏夹展示模块",
     "customSystemHomepage.6.name": "背景设置",
     "customSystemHomepage.6.detail": "全屏或半屏布局选项，支持上传或在线背景图片",
-    "approvalWorkflow.title": "项目审批",
-    "approvalWorkflow.0.name": "可配置审批流程",
-    "approvalWorkflow.0.detail": "灵活的工作流配置，匹配组织要求和合规需求",
-    "approvalWorkflow.1.name": "工作流设计",
-    "approvalWorkflow.1.detail": "自定义审批流程设计和管理工具",
-    "approvalWorkflow.2.name": "审批人指定",
-    "approvalWorkflow.2.detail": "为不同工作流阶段和内容类型分配特定审批人",
+    "standardProjectHub.title": "标准项目库",
+    "standardProjectHub.0.name": "高效项目管理",
+    "standardProjectHub.0.detail": "基于标准看板流程，支持快速项目启动和敏捷执行，提供可自定义看板配置",
+    "standardProjectHub.1.name": "可视化项目管控",
+    "standardProjectHub.1.detail": "提供项目进度总览和阶段状态实时监控，全方位掌握项目执行情况",
+    "standardProjectHub.2.name": "多维度视图模式",
+    "standardProjectHub.2.detail": "提供任务看板、甘特图、文件资产视图等多种项目管理视图",
+    "standardProjectHub.3.name": "成员权限管理",
+    "standardProjectHub.3.detail": "灵活分配任务负责人和审核人，确保职责明确和流程规范",
+    "standardProjectHub.4.name": "团队协作功能",
+    "standardProjectHub.4.detail": "支持多人协作和实时项目进度跟踪，提升团队工作效率",
+    "advancedProjectHub.title": "高级项目库",
+    "advancedProjectHub.0.name": "功能全覆盖",
+    "advancedProjectHub.0.detail": "包含标准项目库的所有核心功能，满足基础项目管理需求",
+    "advancedProjectHub.1.name": "多阶段项目管控",
+    "advancedProjectHub.1.detail": "支持复杂项目的阶段分解和阶段负责人确认机制",
+    "advancedProjectHub.2.name": "自动化工作流引擎",
+    "advancedProjectHub.2.detail": "提供可视化工作流配置，支持多种触发器和自动化规则，内置智能审批工作流",
+    "advancedProjectHub.3.name": "完整模板体系",
+    "advancedProjectHub.3.detail": "覆盖快消、美妆、奢侈品等多个行业的完整项目模板库",
+    "advancedProjectHub.4.name": "交付物验收系统",
+    "advancedProjectHub.4.detail": "集成Readiness检查机制，实现自动化质量验证和合规检测",
+    "advancedProjectHub.5.name": "可视化就绪度管理",
+    "advancedProjectHub.5.detail": "实时展示项目完成度和问题识别，提供决策支持",
+    "advancedProjectHub.6.name": "工作流模板库",
+    "advancedProjectHub.6.detail": "支持用户自定义和保存企业内部最佳实践工作流模板",
     "aiAutoTaggingEngine.title": "AI 自动打标引擎",
     "aiAutoTaggingEngine.0.name": "智能识别能力",
     "aiAutoTaggingEngine.0.detail": "支持文本内容分析和图像识别，结合文件夹路径信息和关键词匹配机制进行精准内容分类",
@@ -158,6 +177,8 @@
     "enterpriseSingleSignOn.1.detail": "通过企业微信进行单点登录配置和授权",
     "enterpriseSingleSignOn.2.name": "钉钉 SSO",
     "enterpriseSingleSignOn.2.detail": "通过钉钉进行单点登录设置和身份验证",
+    "enterpriseSingleSignOn.3.name": "Teams SSO",
+    "enterpriseSingleSignOn.3.detail": "通过 Teams 进行单点登录设置和身份验证",
     "globalAcceleration.title": "海外加速",
     "globalAcceleration.0.name": "全球团队协作支持",
     "globalAcceleration.0.detail": "确保海外团队成员能够正常访问系统，实现跨地区无障碍协作",
