--- a/src/app/i18n/locales/zh-CN/pricing.json
+++ b/src/app/i18n/locales/zh-CN/pricing.json
@@ -545,16 +545,16 @@
   "pricing.perMonth.new": "/月",
   "pricing.contact.sales": "联系销售",
   "pricing.enterpriseSummary.basicFolderPermissions": "基础文件夹权限",
-  "pricing.enterpriseSummary.includesAllBasic": "包含基础版所有功能",
+  "pricing.enterpriseSummary.includesAllBasic": "包含团队版所有功能",
   "pricing.enterpriseSummary.advancedPermissions": "高级权限控制",
   "pricing.enterpriseSummary.advancedExtensions": "高级扩展模块选项",
   "pricing.enterpriseSummary.customPlans": "定制化席位数和存储容量",
   "pricing.enterpriseSummary.dedicatedManager": "专属的客户成功经理",
   "pricing.enterpriseSummary.awsDeployment": "阿里云/AWS 私有化部署",
   "pricing.enterpriseSummary.sla": "SLA 服务水平协议",
-  "pricing.enterpriseBilling.basic.title": "基础版",
+  "pricing.enterpriseBilling.basic.title": "团队版",
   "pricing.enterpriseBilling.basic.description": "适合小团队",
-  "pricing.enterpriseBilling.advanced.title": "高级版",
+  "pricing.enterpriseBilling.advanced.title": "企业版",
   "pricing.enterpriseBilling.advanced.description": "适用于中大型团队和企业",
   "pricing.enterpriseBilling.custom.title": "定制版",
   "pricing.enterpriseBilling.custom.description": "专为有特殊要求的大型机构设计"
