--- a/src/app/i18n/locales/zh-CN/quotation-feature.json
+++ b/src/app/i18n/locales/zh-CN/quotation-feature.json
@@ -1,6 +1,6 @@
 {
     "basic.title": "基础功能",
-    "advanced.title": "高级功能",
+    "advanced.title": "企业功能",
     "features.title": "功能列表",
     "basic.storageManagement": "存储管理",
     "basic.storageManagement.value": "无限批量上传、大文件支持",
@@ -12,12 +12,14 @@
     "basic.sharingAndCollaboration.value": "灵活的资产共享、基于时间的访问控制、权限管理、安全共享、全面的共享仪表盘",
     "basic.analyticsAndMonitoring": "分析与监控",
     "basic.analyticsAndMonitoring.value": "活动日志记录、资产性能分析、用户行为洞察",
-    "advanced.advancedFeatures": "高级功能",
+    "advanced.advancedFeatures": "企业功能",
     "advanced.advancedFeatures.value": "AskMuse、版本控制、协作批注、多级权限、部门管理、企业安全、系统级控制、归属管理",
     "advanced.customSystemHomepage": "自定义系统首页",
     "advanced.customSystemHomepage.value": "主题配置、个性化配置、导航布局、网站链接、推荐板块、内容展示面板、背景设置",
-    "advanced.approvalWorkflow": "审批工作流",
-    "advanced.approvalWorkflow.value": "可配置的审批流程、工作流设计、审批人指定、审批中心",
+    "advanced.standardProjectHub": "标准项目库",
+    "advanced.standardProjectHub.value": "高效项目管理、可视化项目管控、多维度视图模式、成员权限管理、团队协作功能",
+    "advanced.advancedProjectHub": "高级项目库",
+    "advanced.advancedProjectHub.value": "功能全覆盖、多阶段项目管控、自动化工作流引擎、完整模板体系、交付物验收系统、可视化就绪度管理、工作流模板库",
     "advanced.complianceCheck": "合规检查",
     "advanced.complianceCheck.value": "内容安全检测、暴力及敏感内容检测、受限术语检测、企业自定义词过滤",
     "advanced.customMetadataFields": "自定义元数据字段",
