--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -5,8 +5,8 @@
     "customer.contact": "客户联系方式",
     "customer.email": "客户的企业邮箱",
     "your.email": "你的企业邮箱",
-    "tab.basic": "基础版",
-    "tab.advanced": "高级版",
+    "tab.basic": "团队版",
+    "tab.advanced": "企业版",
     "tab.private": "私有化部署",
     "basic.plan": "MuseDAM 团队版",
     "advanced.plan": "MuseDAM 企业版",
@@ -15,8 +15,8 @@
     "member.seat": "成员席位",
     "storage.space": "存储空间",
     "ai.points": "AI 点数订阅",
-    "base.cost": "基础费用",
-    "advanced.modules": "高级模块",
+    "base.cost": "价格",
+    "advanced.modules": "企业模块",
     "implementation": "实施服务",
     "operation.maintenance": "运维服务",
     "feature.overview": "展示功能概览（推荐）",
@@ -64,11 +64,12 @@
     "points.month": "点/月",
     "per.year": "/年",
     "package": "流量包",
-    "advanced.modules.title": "高级模块",
-    "advanced.cost": "高级费用",
-    "module.advancedFeatures": "高级功能",
+    "advanced.modules.title": "企业模块",
+    "advanced.cost": "价格",
+    "module.advancedFeatures": "企业功能",
     "module.customSystemHomepage": "自定义首页工作台",
-    "module.approvalWorkflow": "项目审批",
+    "module.standardProjectHub": "标准项目库",
+    "module.advancedProjectHub": "高级项目库",
     "module.complianceCheck": "合规检测",
     "module.customMetadataFields": "元数据自定义字段",
     "module.watermark": "水印",
