--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -124,14 +124,12 @@
     "advancedProjectHub.1.detail": "Complex project phase breakdown, and Gate Keeper approval mechanisms",
     "advancedProjectHub.2.name": "Automated Workflow Engine",
     "advancedProjectHub.2.detail": "Visual workflow configuration with multiple triggers and automation rules, including intelligent approval workflows",
-    "advancedProjectHub.3.name": "Comprehensive Template Library",
-    "advancedProjectHub.3.detail": "Complete project templates covering FMCG, beauty, luxury goods, and other industry verticals",
-    "advancedProjectHub.4.name": "Deliverable Validation System",
-    "advancedProjectHub.4.detail": "Integrated Readiness checks with automated quality verification and compliance detection",
-    "advancedProjectHub.5.name": "Visual Readiness Management",
-    "advancedProjectHub.5.detail": "Real-time project completion tracking and issue identification for informed decision-making",
-    "advancedProjectHub.6.name": "Workflow Template Library",
-    "advancedProjectHub.6.detail": "Custom workflow templates to capture and scale internal best practices",
+    "advancedProjectHub.3.name": "Business Template Library",
+    "advancedProjectHub.3.detail": "Complete project templates covering marketing campaigns, product visual creation, e-commerce operations, brand visual upgrades, content creation, and other business scenarios",
+    "advancedProjectHub.4.name": "Intelligent Validation & Readiness Management",
+    "advancedProjectHub.4.detail": "Integrated readiness checks with automated quality validation and compliance detection, featuring visual readiness tracking and issue identification for informed project decisions",
+    "advancedProjectHub.5.name": "Custom Template Management",
+    "advancedProjectHub.5.detail": "Create and save custom project templates based on internal best practices",
     "aiAutoTaggingEngine.title": "AI Auto-Tagging Engine",
     "aiAutoTaggingEngine.0.name": "Intelligent Recognition Capabilities",
     "aiAutoTaggingEngine.0.detail": "Support for text content analysis and image recognition, combined with folder path information and keyword matching mechanisms for precise content classification",
