--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -126,14 +126,12 @@
     "advancedProjectHub.1.detail": "支持复杂项目的阶段分解和阶段负责人确认机制",
     "advancedProjectHub.2.name": "自动化工作流引擎",
     "advancedProjectHub.2.detail": "提供可视化工作流配置，支持多种触发器和自动化规则，内置智能审批工作流",
-    "advancedProjectHub.3.name": "完整模板体系",
-    "advancedProjectHub.3.detail": "覆盖快消、美妆、奢侈品等多个行业的完整项目模板库",
-    "advancedProjectHub.4.name": "交付物验收系统",
-    "advancedProjectHub.4.detail": "集成Readiness检查机制，实现自动化质量验证和合规检测",
-    "advancedProjectHub.5.name": "可视化就绪度管理",
-    "advancedProjectHub.5.detail": "实时展示项目完成度和问题识别，提供决策支持",
-    "advancedProjectHub.6.name": "工作流模板库",
-    "advancedProjectHub.6.detail": "支持用户自定义和保存企业内部最佳实践工作流模板",
+    "advancedProjectHub.3.name": "业务模板库",
+    "advancedProjectHub.3.detail": "涵盖营销活动执行、产品视觉制作、电商运营、品牌视觉升级、内容创作等业务场景的完整项目模板库",
+    "advancedProjectHub.4.name": "智能验收与就绪度管理",
+    "advancedProjectHub.4.detail": "集成就绪度检查机制，实现自动化质量验证和合规检测，提供可视化就绪度展示和问题识别，支持项目决策",
+    "advancedProjectHub.5.name": "自定义模板管理",
+    "advancedProjectHub.5.detail": "支持用户自定义和保存企业内部最佳实践项目模板",
     "aiAutoTaggingEngine.title": "AI 自动打标引擎",
     "aiAutoTaggingEngine.0.name": "智能识别能力",
     "aiAutoTaggingEngine.0.detail": "支持文本内容分析和图像识别，结合文件夹路径信息和关键词匹配机制进行精准内容分类",
