change global price

--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -106,7 +106,7 @@
     "form.required": "Please check the required information",
     "contact.email": "Email",
     "module.aiAutoTag": "AI Auto Tagging Engine",
-    "module.aiAutoTagModule": "Module Activation Fee",
+    "module.aiAutoTagModule": "Module Subscription Fee",
     "module.aiAutoTagPoints": "AI Points Package",
     "module.ga": "Overseas Acceleration",
     "sso.feishu": "Feishu",
