--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -106,7 +106,7 @@
     "form.required": "请填写必填信息",
     "contact.email": "邮箱",
     "module.aiAutoTag": "AI 自动打标引擎",
-    "module.aiAutoTagModule": "模块开通费",
+    "module.aiAutoTagModule": "模块订阅费",
     "module.aiAutoTagPoints": "AI 点数包",
     "module.ga": "海外加速",
     "sso.feishu": "飞书",
