update sso in global

--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -25,8 +25,8 @@
     "assetOrganization.title": "Asset Organization",
     "assetOrganization.0.name": "70+ Format Online Preview",
     "assetOrganization.0.detail": "Comprehensive format support with instant preview capabilities including:\n- Images: jpg, jpeg, png, bmp, gif, tiff, webp, heic\n- Design files: eps, svg, psd, psb, ai, cdr, hdr, exr\n- 3D models: obj, ply, 3ds, gltf, glb, fbx, stl\n- Fonts: ttf, otf, ttc\n- Audio: mp3, m4a, wav\n- Video: mov, flv, mp4, webm, m4v, avi, mkv, mgb, rmv, brm, mpg, ts\n- Spreadsheets: et, xls, xlt, xlsx, xlsm, xltx, xltm, csv\n- Documents: txt, doc, docx, dot, dotx, docm, dotm, wps, wpt, rtf, html\n- Presentations: pdf, ppt, pptx, pptm, key, wps",
-    "assetOrganization.1.name": "Four Content Views",
-    "assetOrganization.1.detail": "Enhance project efficiency with four view modes: Adaptive, Waterfall, List, and Kanban, tailored to workflow needs.",
+    "assetOrganization.1.name": "Five Content Views",
+    "assetOrganization.1.detail": "Enhance project efficiency with four view modes: Grid, Adaptive, Waterfall, List, and Kanban, tailored to workflow needs.",
     "assetOrganization.2.name": "Advanced Filtering",
     "assetOrganization.2.detail": "Filter by color, view, format, tags, size, dimensions, duration, rating, links, notes, owner, creation date, sorting, and more",
     "assetOrganization.3.name": "Asset Rating System",
@@ -173,6 +173,8 @@
     "enterpriseSingleSignOn.1.detail": "Single sign-on integration with WeChat Work",
     "enterpriseSingleSignOn.2.name": "DingTalk SSO",
     "enterpriseSingleSignOn.2.detail": "Single sign-on integration and authentication via DingTalk",
+    "enterpriseSingleSignOn.3.name": "Teams SSO",
+    "enterpriseSingleSignOn.3.detail": "Single sign-on integration and authentication via Microsoft Teams",
     "globalAcceleration.title": "Global Acceleration",
     "globalAcceleration.0.name": "Global Team Collaboration Support",
     "globalAcceleration.0.detail": "Ensures overseas team members can access the system seamlessly, enabling barrier-free cross-regional collaboration",
